fix(sandbox/master-layout): remove styling that breaks the external link icons
OUI-3211

--- a/projects/sandbox/src/app/app.component.scss
+++ b/projects/sandbox/src/app/app.component.scss
@@ -4,7 +4,3 @@
 	transform: rotate(180deg);
 	transition: transform variables.$ob-duration-default;
 }
-
-a.ob-external-link {
-	display: inline-block;
-}
